--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ cxx = "1.0.95"
 cxx-qt = "0.7"
 cxx-qt-lib = { version = "0.7", features = ["qt_full"] }
 directories = "6.0.0"
-rusqlite = "0.37.0"
+rusqlite = { version = "0.37", features = ["bundled"] }
 anyhow = "1.0.100"
 
 [build-dependencies]
